--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,9 +1,14 @@
-<h1>Stupid coaching</h1>
+<div class="container my-5">
+  <h1 class="display-4 text-center text-primary mb-4">Stupid coaching</h1>
 
-<h2>Your question</h2>
-<p><%= @question %></p>
+<div class="card shadow-sm p-4 mb-4 bg-light">
+  <h2>Your question</h2>
+  <p class="fs-5"><%= @question %></p>
 
-<h2>Coach's answer</h2>
-<p><%= @answer %></p>
+  <h2>Coach's answer</h2>
+  <p class="fs-5 text-success fst-italic"><%= @answer %></p>
 
-<a href="/ask">Ask another question</a>
+  <div class="text-center">
+    <a href="/ask" class="btn btn-outline-primary btn-lg">Ask another question</a>
+  </div>
+</div>
