--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,14 +1,22 @@
-<h1>Stupid coaching</h1>
+<div class="container my-5">
+  <h1 class="display-4 text-center text-primary mb-4">Stupid coaching</h1>
 
-<p>Ask your coach anything</p>
+  <div class="card shadow-sm p-4 mb-5">
+  <p class="lead text-center">Ask your coach anything</p>
 
-<form action="/answer" method="get" data-turbo="false">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+  <form action="/answer" method="get" data-turbo="false" class="d-flex gap-2 justify-content-center">
+    <input type="text" name="question" class="form-control w-50" placeholder="Type your question here..." required>
+    <input type="submit" value="Ask!" class="btn btn-primary px-4">
+  </form>
+  </div>
 
-<h1>Your question</h1>
-<p><%= @question %></p>
+  <% if @question.present? || @answer.present? %>
+    <div class="card shadow-sm p-4 bg-light">
+      <h2>Your question</h2>
+      <p class="fs-5"><%= @question %></p>
 
-<h2>Coach's answer</h2>
-<p><%= @answer %></p>
+      <h2>Coach's answer</h2>
+      <p class="fs-5 text-success fst-italic"><%= @answer %></p>
+    </div>
+  <% end %>
+</div>
